fix(SignInButton): update margins to resolve collisions with new menu item hover spacing

--- a/assets/scripts/menus/SignInButton.scss
+++ b/assets/scripts/menus/SignInButton.scss
@@ -1,7 +1,12 @@
 @import "../../styles/variables";
 
 .menu-bar .menu-sign-in {
-  margin-left: 0.1em;
+  margin-left: 0.5em;
   margin-right: 0.1em;
   padding: 0.5em 1em;
+
+  [dir="rtl"] & {
+    margin-left: 0.1em;
+    margin-right: 0.5em;
+  }
 }
